# langgraph-agent-playground

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml  pytest.ini  railway.toml  run_streamlit.py  run_tests.py
playground/agents/: graph.py  shopping_agent.py
playground/agents/react/: configuration.py  graph.py
playground/agents/supervisor/: configuration.py  graph.py  prebuilt.py  subagents.py
playground/tools/: __init__.py  crawl.py  finance.py  search.py  utility.py
playground/utils/: langsmith.py  model.py
src/kshop/: __init__.py
src/kshop/agents/: supervisor_agent.py
src/kshop/tools/: __init__.py
src/kshop/utils/: __init__.py
tests/: conftest.py  test_openrouter_models.py
