[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-playground"
version = "0.1.0"
description = "Shopping agent with LangGraph and LangChain"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "langchain>=0.2.0",
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "streamlit>=1.32.0",
    "streamlit-chat>=0.1.1",
    "streamlit-option-menu>=0.3.6",
    "streamlit-ace>=0.1.1",
    "extra-streamlit-components>=0.1.60",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-mcp-adapters>=0.1.8",
    "langgraph-supervisor>=0.0.27",
    "langchain-community>=0.3.27",
    "yfinance>=0.2.65",
    "firecrawl-py>=2.15.0",
    "langgraph-cli>=0.3.3",
    "langgraph-api>=0.2.78",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "ANN", "S", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["ANN101", "ANN102", "D"]

[tool.hatch.build.targets.wheel]
packages = ["playground"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
